--- a/Code/css/Pinball.css
+++ b/Code/css/Pinball.css
@@ -122,6 +122,7 @@
     height: 25px;
     width: 85px;
 }
+
 #SideHolder{
     right: 19px;
     top: 215px;
@@ -418,7 +419,7 @@
     top: 335.5px;
     left: 17.5px
 }
-#Apple,#Google{
+#Apple,#Google,#Steam{
     width: 75px;
     margin-bottom: 2px;
     cursor: pointer;
@@ -636,7 +637,7 @@
     font-size: 9px;
 }
 #InfoPopup .ScrollBod .InfoButton#TransparentMenus,#InfoPopup .ScrollBod .InfoButton#LossPrestiges{
-    width: 125px;
+    width: 145px;
     height: 31px;
     margin-top: 11.5px;
     font-size: 9px;
